[package]
name = "ncnn-bind"
version = "0.1.2"
authors = ["tpoisonooo <khj.application@aliyun.com>"]
edition = "2021"
description = "ncnn Rust binding"
license = "Apache-2.0"
homepage = "https://github.com/tpoisonooo/rust-ncnn"
repository = "https://github.com/tpoisonooo/rust-ncnn"
keywords = ["binding", "ncnn"]

[features]
# Explicitly use static linking
static = []
# Explicitly use dynamic linking
dynamic = []
# Enable vulkan backend
vulkan = []
# Fetch ncnn source code and build it
build = []

[dependencies]
libc = "0.2"

[build-dependencies]
cmake = "0.1"
bindgen    = { version = "0.64", default-features = false, features = ["runtime"] }
